# bessie

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
doc/: backtest.ipynb  optimiser.ipynb  optimiser_fcas.ipynb  strategies.ipynb
src/bessie/: analysis.py  core.py
src/bessie/backtests/: __init__.py  _backtest.py  _backtest_njit.py  _core.py  _models.py
src/bessie/data/: __init__.py  _core.py  _decorators.py  _predispatch.py
src/bessie/data/bronze/: __init__.py  _p5min.py  _predispatch.py
src/bessie/data/silver/: __init__.py  _forecast.py  _prices.py
src/bessie/plotting/: __init__.py  _core.py
src/bessie/scripts/2026_02/: 0_test_nemseer.py  1_plot_actual_prices.py  2_build_forecast.py
src/bessie/strategies/: __init__.py  _core.py  baseline.py  dynamic.py  optimised.py  optimised_fcas.py  quantiles.py
