[project]
name = "bessie"
version = "0.1.0"
description = "BESS modelling in the NEM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.9.21",
    "dash>=4.0.0",
    "ipython>=9.9.0",
    "nemosis>=3.8.1",
    "nemseer>=1.0.7",
    "pandas<3",
    "pandas-stubs>=2.3.3.260113",
    "plotly-resampler>=0.11.0",
    "pytest>=7.0.0,<8.0.0",
    "ruff>=0.14.13",
]
