[project]
name = "bessie"
version = "0.1.0"
description = "BESS modelling in the NEM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.9.21",
    "cvxpy>=1.8.1",
    "dash>=4.0.0",
    "dask>=2026.1.2",
    "ipykernel>=6.29.5",
    "ipython>=9.9.0",
    "ipywidgets>=8.1.8",
    "kaleido>=1.2.0",
    "nbformat>=5.10.4",
    "nemosis>=3.8.1",
    "nemseer>=1.0.7",
    "numba>=0.63.1",
    "pandas<3",
    "pandas-stubs>=2.3.3.260113",
    "plotly-resampler>=0.11.0",
    "pytest>=7.0.0,<8.0.0",
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 80
